// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PropertyConstraints /> renders array constraints 1`] = `
<span
  className={undefined}
>
  <span>
    <span
      className={undefined}
    >
      unique items
    </span>
  </span>
</span>
`;

exports[`<PropertyConstraints /> renders numeric constraints 1`] = `
<span
  className={undefined}
/>
`;

exports[`<PropertyConstraints /> renders object constraints 1`] = `
<span
  className={undefined}
>
  <span>
    <span
      className={undefined}
    >
      at least 2 properties
    </span>
  </span>
</span>
`;

exports[`<PropertyConstraints /> renders required constraint 1`] = `
<span
  className={undefined}
>
  <span
    className={undefined}
  >
    required
  </span>
</span>
`;

exports[`<PropertyConstraints /> renders string constraints 1`] = `
<span
  className={undefined}
>
  <span>
    <span
      className={undefined}
    >
      /^[a-zA-Z0-9_-]+$/
    </span>
  </span>
</span>
`;
